--- a/wp-content/themes/snf/styles/css/gravity-overwrite.css
+++ b/wp-content/themes/snf/styles/css/gravity-overwrite.css
@@ -6,7 +6,8 @@
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    text-transform: uppercase;color: #495057;
+    /* text-transform: uppercase; */
+    color: #495057;
     background-color: #fff;
     background-clip: padding-box;
     border: 1px solid #ced4da;
