--- a/wp-content/themes/snf/styles/css/subsidiary.css
+++ b/wp-content/themes/snf/styles/css/subsidiary.css
@@ -10,29 +10,19 @@
 .subs-flexible-wrapper{
     padding:0;
 }
-
-
 /*===================================================
     II.) Subsidiary Card
 ======================================================*/
-
 /*===================================================
     III.) WYSIWYG
 ======================================================*/
-
-
-
-
 /*===================================================
     IV.) Certifications
 ======================================================*/
 
 @media(min-width:768px){
     .subs-content h2{
-        /* color:#0082CA; */
-        /* text-transform: uppercase; */
         font-size: 1.45rem;
-        /* font-weight: 300 !important; */
     }
     .layout-title{
         color:#0082CA;
@@ -55,10 +45,6 @@
     ======================================================*/
     #accordion button, #accordion button:hover, #accordion button:focus{
         text-decoration: none;
-    }
-    .subsid-accordion{
-        /* margin: 0 1%; */
-        /* padding: 0 !important; */
     }
     .subsid-accordion .card{
         margin:1% 0;
@@ -113,32 +99,25 @@
     }
     .certification-row .certificate-link .certification-icon{
         /* height:45px; */
-        font-size: 1.55rem;
-        color: #0082CA;
+        font-size: 1.25rem;
+        color: #33383c;
     }
     .certification-row h3{
         text-transform: uppercase;
         font-size: 16px;
-        color: #0082CA;
+        color: #33383c;
         margin: 0;
         /* display: flex; */
-        /* justify-content: center; */
+        font-weight: 600;
     }
     /*===================================================
     I.) Split Layout Alternating
     ======================================================*/
     .split-container{
-        position:
-                relative;
-        /* padding: 2% 0; */
+        position: relative;
     }
     .layered-bg-behind{
-        /* position:
-        relative; */
-        /* width: 100%; */
         height: 100%;
-        /* margin-left: 0 !important; */
-        /* border-radius: 4px; */
     }
     .layered-bg-behind::before {
         /* content: ""; */
@@ -153,10 +132,6 @@
         opacity: .7;
         border-radius: 4px;
     }
-    .layered-bg-behind::before {
-        /* transform: skew(-15deg) translateX(-50%); */
-        /* transform: unset; */
-    }
     .layered-bg-behind.right::before{
         content: "";
         position: absolute;
@@ -168,8 +143,6 @@
         height: 112%;
         background-image: linear-gradient(120deg,#002d73,#0082CA);
         opacity: .7;
-    }
-    .layered-bg-behind {
     }
     .layered-bg-behind > * {
         z-index: 100;
@@ -199,15 +172,10 @@
         height: 45px;
     }
     .global-overflow{
-        /* overflow-x: hidden !important; */
     }
-    .subsid-accordion h5 a.subsididary-collapse.collapsed{
+    .subsid-accordion h5 a.subsididary-collapse.collapsed, .subsid-accordion h5 a.subsididary-collapse{
         font-weight:600 !important;
-
     }
-    .subsid-accordion h5 a.subsididary-collapse{
-
-        font-weight: 600;}
     .subsid-accordion h5 a.collapsible-link[aria-expanded='true']{
         color: #0082CA !important;
         font-weight:600 !important;
@@ -235,8 +203,6 @@
     ======================================================*/
     #accordion button, #accordion button:hover, #accordion button:focus{
         text-decoration: none;
-    }
-    .subsid-accordion{
     }
     .subs-content ol{
         padding:0;
@@ -304,37 +270,27 @@
     .certification-row h3{
         text-transform: uppercase;
         font-size: 15px;
-        color: #0082CA;
+        color: #33383c;
         margin: 0;
-        font-weight: 500;
-        /* letter-spacing: .5px; */
+        font-weight: 800;
+    }
+    .certification-row .certificate-link .certification-icon {
+        font-size: 1.25rem;
+        color: #33383c;
     }
     /*===================================================
     I.) Split Layout Alternating
     ======================================================*/
     .split-container{
-        position:
-                relative;
-        /* padding: 2% 0; */
+        position:relative;
     }
     .layered-bg-behind{
         position:relative;
-        /* width: 100%; */
         height: 100%;
-        /* margin-left: 0 !important; */
-        /* margin-right: 0 !important; */
     }
     .layered-bg-behind::before {
-        /* content: ""; */
-        /* position: absolute; */
-        /* top: 0; */
-        /* left: 0; */
         bottom: 0;
         transform: skew(15deg) translateX(-50%);
-        /* width: 100%; */
-        /* height: 100%; */
-        /* background-image: linear-gradient(120deg,#002d73,#0082CA); */
-        /* opacity: .7; */
     }
     .layered-bg-behind::before {
         transform: skew(-15deg) translateX(-50%);
@@ -352,32 +308,22 @@
         background-image: linear-gradient(120deg,#002d73,#0082CA);
         opacity: .7;
     }
-    .layered-bg-behind {
-    }
     .layered-bg-behind > * {
         z-index: 100;
     }
     .split-imagery{
         background-size: cover;
         background-position: center;
-        /* display: flex; */
-        /* z-index:1; */
         min-height: 15vh;
     }
     .split-content{
         background-color: rgba(255,255,255,.8);
-        /* display: grid; */
-        /* justify-content: center; */
-        /* align-items: center; */
     }
     .split-content h2, .split-content p{/* row-gap: 15px; *//* grid-template-columns: 100px 50px 100px; *//* grid-template-rows: 80px auto 80px; *//* column-gap: 10px; */}
     .split-content h2{
-        color:
-                rgba(0,130,202,1);
+        color: rgba(0,130,202,1);
         margin: 1% 0;
-        /* font-weight: 100; */
-        display:
-                block;
+        display:  block;
         row-gap: 15px;
     }
     .split-content .split-link img{
@@ -393,13 +339,11 @@ section.video-cta{
     padding-top: 7rem;
     padding-bottom: 7rem;
     position: relative;
-
     border-bottom: none;
     background-position: center center;
     -webkit-background-size: cover;
     background-size: cover;
     background-repeat: no-repeat;
-
 }
 [data-parallax], [data-video], .jarallax {
     position: relative;
